Made CuckooChess depend on the CuckooChessEngine project instead of duplicating the source code. (This unfortunately broke the jar file. Will be fixed later.)

--- a/CuckooChess/.project
+++ b/CuckooChess/.project
@@ -3,6 +3,7 @@
 	<name>CuckooChess</name>
 	<comment></comment>
 	<projects>
+		<project>CuckooChessEngine</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
