Draw an ascii chess board. No other chess functionality in the program though.

--- a/CuckooChessAPK/.project
+++ b/CuckooChessAPK/.project
@@ -3,6 +3,7 @@
 	<name>CuckooChessAPK</name>
 	<comment></comment>
 	<projects>
+		<project>CuckooChessEngine</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
