--- a/CuckooChessAPK/AndroidManifest.xml
+++ b/CuckooChessAPK/AndroidManifest.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest package="org.petero.cuckoochess"
-      android:versionCode="1"
-      android:versionName="1.0" xmlns:android="http://schemas.android.com/apk/res/android">
+    android:versionCode="2"
+    android:versionName="1.05"
+    xmlns:android="http://schemas.android.com/apk/res/android">
     <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".CuckooChess"
                   android:label="@string/app_name">
@@ -10,7 +11,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-    <activity android:name="Preferences" android:label="Preferences"></activity>
-</application>
+        <activity android:name="Preferences" android:label="Preferences"></activity>
+    </application>
     <uses-sdk android:minSdkVersion="4" />
-</manifest> 
+</manifest>
