--- a/CuckooChessAPK/AndroidManifest.xml
+++ b/CuckooChessAPK/AndroidManifest.xml
@@ -3,7 +3,9 @@
     android:versionCode="2"
     android:versionName="1.05"
     xmlns:android="http://schemas.android.com/apk/res/android">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/icon"
+    			 android:label="@string/app_name"
+    			 android:debuggable="true">
         <activity android:name=".CuckooChess"
                   android:label="@string/app_name">
             <intent-filter>
