--- a/DroidFish/AndroidManifest.xml
+++ b/DroidFish/AndroidManifest.xml
@@ -2,7 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.petero.droidfish"
       android:versionCode="2"
-      android:versionName="1.01">
+      android:versionName="1.01"
+      android:installLocation="auto">
     <application android:icon="@drawable/icon"
     			 android:label="@string/app_name"
     			 android:debuggable="true">
