--- a/DroidFish/AndroidManifest.xml
+++ b/DroidFish/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="org.petero.droidfish"
-      android:versionCode="2"
-      android:versionName="1.01"
+      android:versionCode="3"
+      android:versionName="1.02"
       android:installLocation="auto">
     <application android:icon="@drawable/icon"
     			 android:label="@string/app_name"
-    			 android:debuggable="true">
+    			 android:debuggable="false">
         <activity android:name=".DroidFish"
                   android:label="@string/app_name"
                   android:screenOrientation="portrait">
