--- a/DroidFish/AndroidManifest.xml
+++ b/DroidFish/AndroidManifest.xml
@@ -9,7 +9,7 @@
     			 android:debuggable="false">
         <activity android:name=".DroidFish"
                   android:label="@string/app_name"
-                  android:screenOrientation="portrait">
+                  android:configChanges="orientation">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
