--- a/DroidFish/AndroidManifest.xml
+++ b/DroidFish/AndroidManifest.xml
@@ -15,7 +15,13 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="Preferences" android:label="Preferences"></activity>
+        <activity android:name="Preferences"
+        		  android:label="Preferences">
+        </activity>
+        <activity android:name="EditBoard"
+        		  android:label="Edit Board"
+                  android:configChanges="orientation">
+        </activity>
     </application>
     <uses-sdk android:minSdkVersion="3"/>
 </manifest>
