DroidFish: If using a lot of CPU in the background, warn user that it might drain the batteries.

--- a/DroidFish/AndroidManifest.xml
+++ b/DroidFish/AndroidManifest.xml
@@ -22,6 +22,9 @@
         		  android:label="Edit Board"
                   android:configChanges="orientation">
         </activity>
+        <activity android:name="CPUWarning"
+        		  android:label="CPU Warning">
+        </activity>
     </application>
     <uses-sdk android:minSdkVersion="3"/>
 </manifest>
