DroidFish: Implemented loading of PGN games from files on the SD card. The files must be located in the DroidFish/pgn directory.

--- a/DroidFish/AndroidManifest.xml
+++ b/DroidFish/AndroidManifest.xml
@@ -22,6 +22,10 @@
         		  android:label="Edit Board"
                   android:configChanges="orientation">
         </activity>
+        <activity android:name="LoadPGN"
+        		  android:label="Load PGN"
+				  android:screenOrientation="portrait">
+        </activity>
         <activity android:name="CPUWarning"
         		  android:label="CPU Warning">
         </activity>
