DroidFish: Made the load PGN activity handle screen orientation changes without being restarted.

--- a/DroidFish/AndroidManifest.xml
+++ b/DroidFish/AndroidManifest.xml
@@ -23,8 +23,8 @@
                   android:configChanges="orientation">
         </activity>
         <activity android:name="LoadPGN"
-        		  android:label="Load PGN"
-				  android:screenOrientation="portrait">
+        		  android:label="Load PGN game"
+        		  android:configChanges="orientation">
         </activity>
         <activity android:name="CPUWarning"
         		  android:label="CPU Warning">
