DroidFish: Implemented PGN header editing. The widget layout is bad though.

--- a/DroidFish/AndroidManifest.xml
+++ b/DroidFish/AndroidManifest.xml
@@ -29,6 +29,9 @@
         <activity android:name="CPUWarning"
         		  android:label="CPU Warning">
         </activity>
+        <activity android:name="EditHeaders"
+        		  android:label="Edit Headers">
+        </activity>
     </application>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-sdk android:minSdkVersion="3"/>
