DroidFish: Made it possible to select where in a file to save a PGN game.

--- a/DroidFish/AndroidManifest.xml
+++ b/DroidFish/AndroidManifest.xml
@@ -23,7 +23,7 @@
                   android:configChanges="orientation">
         </activity>
         <activity android:name=".activities.LoadPGN"
-        		  android:label="Load PGN game"
+        		  android:label="Edit File"
         		  android:configChanges="orientation">
         </activity>
         <activity android:name=".activities.CPUWarning"
