DroidFish: Added support for opening scid databases using the "Scid on the go" app. Patch from Gerhard Kalab, somewhat modified by me.

--- a/DroidFish/AndroidManifest.xml
+++ b/DroidFish/AndroidManifest.xml
@@ -30,6 +30,10 @@
         		  android:label="Edit File / Save Game"
         		  android:configChanges="orientation">
         </activity>
+        <activity android:name=".activities.LoadScid"
+                  android:label="Load Scid Game"
+                  android:configChanges="orientation">
+        </activity>
         <activity android:name=".activities.CPUWarning"
         		  android:label="CPU Warning">
         </activity>
