--- a/DroidFish/AndroidManifest.xml
+++ b/DroidFish/AndroidManifest.xml
@@ -4,6 +4,8 @@
       android:versionCode="27"
       android:versionName="1.26"
       android:installLocation="auto">
+    <supports-screens android:largeScreens="true"
+                      android:anyDensity="true" />
     <application android:icon="@drawable/icon"
     			 android:label="@string/app_name"
     			 android:debuggable="false">
